# sdl2_vcpkg_cmake_pt1

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
app/: CMakeLists.txt  sdl2_main.cc
